Fix truncation width of list name

--- a/src/app/todos/todo-lists/todo-list-item/todo-list-item.component.css
+++ b/src/app/todos/todo-lists/todo-list-item/todo-list-item.component.css
@@ -56,6 +56,7 @@ a:hover .fa-pencil:hover {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  max-width: 240px;
 }
 
 .active-drop-target {
